modify css, squashed duplication bugs, added additional fields like time left, alert time, item link, and title

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -4,7 +4,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 15px;
-    width: 300px;
+    width: 350px;
   }
   
   h1 {
@@ -21,6 +21,7 @@ body {
     margin-bottom: 10px;
     padding: 10px;
     border-radius: 5px;
+    margin-right: 25px;
   }
   
   button {
